--- a/README
+++ b/README
@@ -2,5 +2,5 @@ HelpMe Module README
 
 This module presents a series of messages to help new instructors and administrators learn the basic features of ATutor, and quickly become proficient users. 
 
-Administrator can enable and disable the module and modify the help messages to the needs. 
+Administrator can enable and disable the module and modify the help messages to their needs. 
 
